tried fixing layout issue on project and resume page along with hid modal for further development

--- a/css/projectsCss.css
+++ b/css/projectsCss.css
@@ -224,15 +224,10 @@ a.navbar-item:hover{
 }
 
 @media only screen and (max-width: 768px){
-    .mobileTopSection{
-        display: revert;
-        margin-top: 14vh;
-        box-shadow: 0 2vh 9px 3px rgb(10 10 10 / 30%);
-    }
-
     .navbar-item{
         font-size: 4vw;
         align-items: center;
     }
+    
     
 }
